force-app/main/default/objects/HOMEtracker__Service_File__c/HOMEtracker__Service_File__c.object-meta.xml
<CustomObject>
    <description>Applications for assistance, home purchases, and other services provided</description>
    <label>Service File</label>
    <nameField>
        <label>Service File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>