force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Adjusted_Increase_Year_Notes__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Increase_Year_Notes__c</fullName>
    <formula>IF( Post_2014_Inc_Limits_Adopted__c =false,&quot;INCOME LIMITS PAST 2014 NOT ADOPTED&quot;,
LPAD(TEXT(MONTH(Post_2014_Inc_Adoption_Date__c)),2,&quot;0&quot;)&amp;&quot;/&quot;&amp;
LPAD(TEXT(DAY(Post_2014_Inc_Adoption_Date__c)),2,&quot;0&quot;)&amp;&quot;/&quot;&amp;
TEXT(YEAR(Post_2014_Inc_Adoption_Date__c))&amp;
&quot; (New Income Limits Adoption Date)&quot;&amp; BR()&amp;
LPAD(TEXT(month(Current_Lease__r.Lease_Begin__c -90)),2,&quot;0&quot;)&amp;&quot;/&quot;&amp;
LPAD(TEXT(day(Current_Lease__r.Lease_Begin__c -90)),2,&quot;0&quot;)&amp;&quot;/&quot;&amp;
TEXT(YEAR(Current_Lease__r.Lease_Begin__c -90))&amp;
&quot; (Current Start Date minus 90 days)&quot;&amp;br()&amp;
IF(Post_2014_Inc_Adoption_Date__c&gt;(Current_Lease__r.Lease_Begin__c -90),&quot;Increases approved AFTER current lease&quot;,&quot;Increases approved BEFORE current lease&quot;)&amp;BR()&amp;
IF(Post_2014_Inc_Adoption_Date__c&gt;(Current_Lease__r.Lease_Begin__c -90),&quot;MULTI-YEAR INCREASE AVAILABLE&quot;,&quot;Only current year increase available&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Increase Year Notes</label>
    <type>Text</type>
</CustomField>