force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Affordable_Housing_docs_on_file__c.field-meta.xml
<CustomField>
    <fullName>Affordable_Housing_docs_on_file__c</fullName>
    <inlineHelpText>file audit for various programs</inlineHelpText>
    <label>Affordable Housing docs on file</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hamilton Park Complete (cert K and cert J, 95/5 mortgage note)</fullName>
            </value>
            <value>
                <fullName>No affordable housing documents on file</fullName>
            </value>
            <value>
                <fullName>Partial documents on file</fullName>
            </value>
            <value>
                <fullName>Union - Affordable docs executed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>