force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Affordable_Housing_Mortgage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Affordable_Housing_Mortgage_Amount__c</fullName>
    <formula>HOMEtracker__Property__r.HOMEtracker__Unrestricted_Market_Value__c   -  HOMEtracker__Seller__r.HOMEtracker__Contract_Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is calculated as follows: Affordable Mortgage Amount = Unrestricted Market Value (from Property) - Contract Sale Price (from Seller&apos;s Service File).</inlineHelpText>
    <label>Resale - Aff Mortgage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>