force-app/main/default/objects/HOMEtracker__Service_File__c/fields/App_in_Process__c.field-meta.xml
<CustomField>
    <fullName>App_in_Process__c</fullName>
    <inlineHelpText>Was this app ever in the the &quot;Application in Process&quot; status? Auto-filled when status is changed.</inlineHelpText>
    <label>App in Process?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>