force-app/main/default/objects/HOMEtracker__Service_File__c/fields/App_or_CoApp_in_Region__c.field-meta.xml
<CustomField>
    <fullName>App_or_CoApp_in_Region__c</fullName>
    <formula>IF( 
OR(
HOMEtracker__Applicant__r.Address_COAH_Region__c =  TEXT(HOMEtracker__Property__r.COAH_Regions__c ),
 HOMEtracker__Co_Applicant__r.Address_COAH_Region__c  =  TEXT(HOMEtracker__Property__r.COAH_Regions__c )
)
,&quot;YES&quot;,&quot;??&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If either the primary applicant or the co-applicant live in the region of the property, this will say &quot;Yes&quot;.</inlineHelpText>
    <label>App or CoApp Live in Region</label>
    <type>Text</type>
</CustomField>