force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Appeal_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Deadline__c</fullName>
    <description>The appeal deadline the applicant has to submit the missing supporting documents by.</description>
    <inlineHelpText>The appeal deadline the applicant has to submit the missing supporting documents by.</inlineHelpText>
    <label>Appeal Deadline</label>
    <type>DateTime</type>
</CustomField>