force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Applicant_Case_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Case_SF_Id__c</fullName>
    <formula>CASESAFEID( HOMEtracker__Applicant__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Case SF Id</label>
    <type>Text</type>
</CustomField>