force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Applicant_has_no_Income__c.field-meta.xml
<CustomField>
    <fullName>Applicant_has_no_Income__c</fullName>
    <description>If the applicant has an income, select &quot;Yes&quot;.</description>
    <inlineHelpText>If the applicant has an income, select &quot;Yes&quot;.</inlineHelpText>
    <label>Does Applicant Have Income?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>