force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Application_Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>Application_Case_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The primary case manager who is processing this applicant&apos;s application.</inlineHelpText>
    <label>Primary Reviewer_OLD</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Services (Application Case Manager)</relationshipLabel>
    <relationshipName>Contact</relationshipName>
    <type>Lookup</type>
</CustomField>