force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Application_Case_Manager_New__c.field-meta.xml
<CustomField>
    <fullName>Application_Case_Manager_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the staff member who performed the full income certification.</description>
    <inlineHelpText>Select the staff member who performed the full income certification.</inlineHelpText>
    <label>Primary Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services3</relationshipName>
    <type>Lookup</type>
</CustomField>