force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Application_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Application_Deadline__c</fullName>
    <inlineHelpText>The date the application and supporting docs must be received by.  Use Application notes deadline for additional deadlines set by case manager during the review process for specific requested documents.</inlineHelpText>
    <label>Application Deadline</label>
    <type>Date</type>
</CustomField>