force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Application_Due_Passed__c.field-meta.xml
<CustomField>
    <fullName>Application_Due_Passed__c</fullName>
    <formula>AND(PHA__Application_Due_Date__c &gt;  DATE(1900,1,1) , PHA__Application_Due_Date__c &lt; TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Due Passed</label>
    <type>Checkbox</type>
</CustomField>