force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Application_Ineligibility_Reason_s__c.field-meta.xml
<CustomField>
    <fullName>Application_Ineligibility_Reason_s__c</fullName>
    <description>If ineligible, select at least one reason. These reasons will make bulleted explanations appear on the ineligibility email merge.</description>
    <inlineHelpText>If ineligible, select at least one reason. These reasons will make bulleted explanations appear on the ineligibility email merge.</inlineHelpText>
    <label>Application Ineligibility Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Over Income - Specific Region or All Regions</fullName>
            </value>
            <value>
                <fullName>Over Income - Income Level, May Qualify for Other Income Levels</fullName>
            </value>
            <value>
                <fullName>Under Income</fullName>
            </value>
            <value>
                <fullName>Out of Region</fullName>
            </value>
            <value>
                <fullName>Does Not Meet Local Preference</fullName>
            </value>
            <value>
                <fullName>Does Not Meet Veterans&apos; Preference</fullName>
            </value>
            <value>
                <fullName>Does Not Meet Age-Restriction Requirements</fullName>
            </value>
            <value>
                <fullName>Household Too Small</fullName>
            </value>
            <value>
                <fullName>Household Too Large</fullName>
            </value>
            <value>
                <fullName>Did Not Submit Supporting Documents - WL</fullName>
            </value>
            <value>
                <fullName>Did Not Submit Supporting Documents - No WL</fullName>
            </value>
            <value>
                <fullName>Other - See Ineligibility Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>