force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Application_Notes__c.field-meta.xml
<CustomField>
    <fullName>Application_Notes__c</fullName>
    <label>Application Notes</label>
    <type>TextArea</type>
</CustomField>