force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Application_notes_deadline__c.field-meta.xml
<CustomField>
    <fullName>Application_notes_deadline__c</fullName>
    <description>Deadline set by case manager during the application review process for the applicant to submit additional supporting docs.</description>
    <inlineHelpText>Deadline set by case manager during the application review process for the applicant to submit additional supporting docs.</inlineHelpText>
    <label>OLD_Additional Documents Deadline</label>
    <type>Date</type>
</CustomField>