force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Application_Printed__c.field-meta.xml
<CustomField>
    <fullName>Application_Printed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box once the application has been printed and placed in the cabinet.</description>
    <inlineHelpText>Check this box once the application has been printed and placed in the cabinet.</inlineHelpText>
    <label>Application Printed / Organized?</label>
    <type>Checkbox</type>
</CustomField>