force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Application_URL_Internal__c.field-meta.xml
<CustomField>
    <fullName>Application_URL_Internal__c</fullName>
    <formula>HOMEtracker__Applicant__r.PHA__ApplicationURLInternal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application URL (Internal)</label>
    <type>Text</type>
</CustomField>