force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Application_Workflow_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Workflow_Status__c</fullName>
    <description>Used to track staff&apos;s progress through the income certification process.</description>
    <inlineHelpText>Tracks the status of the certification process.</inlineHelpText>
    <label>Application Workflow Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited - Waiting to Submit</fullName>
            </value>
            <value>
                <fullName>Waiting for Rental Pre-Screen</fullName>
            </value>
            <value>
                <fullName>Failed Pre-Screen</fullName>
            </value>
            <value>
                <fullName>Pre-Screen Complete, Not Yet Referred</fullName>
            </value>
            <value>
                <fullName>Application Received - Waiting for Credit Results</fullName>
                <label>Application Received - Waiting for Credit / Developer</label>
            </value>
            <value>
                <fullName>Application Received - Missing Mortgage Pre-Approval</fullName>
            </value>
            <value>
                <fullName>Application Received - Backup Ready for Full Income Certification</fullName>
                <color>#FFCC66</color>
                <label>Application Received - Backup Ready for Full Income Certification</label>
            </value>
            <value>
                <fullName>Application Received - Ready for Full Income Certification</fullName>
                <color>#F3D904</color>
                <label>Application Received - Ready for Full Income Certification</label>
            </value>
            <value>
                <fullName>Application Received - Full Income Certification In Progress</fullName>
                <color>#3366FF</color>
                <label>Application Received - Full Income Certification In Progress</label>
            </value>
            <value>
                <fullName>Application Received - Ready for Peer Review</fullName>
                <color>#9999FF</color>
                <label>Application Received - Ready for Peer Review</label>
            </value>
            <value>
                <fullName>Application Received - Peer Review In Progress</fullName>
                <color>#CC33CC</color>
                <label>Application Received - Peer Review In Progress</label>
            </value>
            <value>
                <fullName>Application Received - Peer Review Completed</fullName>
                <color>#993399</color>
                <label>Application Received - Peer Review Completed</label>
            </value>
            <value>
                <fullName>Application Received - Peer Review Completed - On Hold</fullName>
                <color>#663366</color>
                <label>Application Received - Peer Review Completed - On Hold</label>
            </value>
            <value>
                <fullName>Application Received - Updating After Peer Review</fullName>
                <color>#339999</color>
                <label>Application Received - Updating After Peer Review</label>
            </value>
            <value>
                <fullName>Application Received - Certification Completed</fullName>
                <color>#78C953</color>
                <label>Application Received - Certification Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>