force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Assets_Sold_Given_in_Past_Two_Years__c.field-meta.xml
<CustomField>
    <fullName>Assets_Sold_Given_in_Past_Two_Years__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has any member of your household sold or given away real property or other assets (including cash) in the past two years?</inlineHelpText>
    <label>Assets Sold/Given in Past Two Years</label>
    <type>Checkbox</type>
</CustomField>