force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Assistance_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Complete_Date__c</fullName>
    <inlineHelpText>The date the applicant&apos;s assistance was completed.</inlineHelpText>
    <label>Assistance Complete Date</label>
    <type>Date</type>
</CustomField>