force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Assistance_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when an applicant&apos;s assistance has been invoiced.</inlineHelpText>
    <label>Assistance Invoiced?</label>
    <type>Checkbox</type>
</CustomField>