force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Assistance_URL__c.field-meta.xml
<CustomField>
    <fullName>Assistance_URL__c</fullName>
    <formula>HYPERLINK(
&quot;https://www.tfaforms.com/&quot;
+ Municipality_Lookup__r.Assistance_Form_ID__c 
+&quot;?tfa_4653=PROPERTY:+&quot;
+ HOMEtracker__Property__r.Name + &quot;,+&quot;
+ HOMEtracker__Property__r.HOMEtracker__City__c + &quot;,+&quot;
+ HOMEtracker__Property__r.HOMEtracker__State__c + &quot;+&quot;
+  HOMEtracker__Property__r.HOMEtracker__Postal_Code__c 
+&quot;&amp;tfa_4651=&quot;+Id
+&quot;&amp;tfa_4654=&quot;+IF( RecordTypeId =&quot;012o0000000gaaB&quot;,&quot;H&quot;,&quot;R&quot;)
,&quot;assistance app&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assistance URL</label>
    <type>Text</type>
</CustomField>