force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Backup__c.field-meta.xml
<CustomField>
    <fullName>Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to signify if an applicant is a backup for a specific Property. Manually checked on new Service Files for backup applicants during the morning review of the &quot;Certifications for AA&quot; report. (If the applicant becomes first in line for their unit, the field is unchecked at that point).</description>
    <inlineHelpText>Check if this applicant is a backup for a Property. Remember to uncheck if they become first in line.</inlineHelpText>
    <label>Backup</label>
    <type>Checkbox</type>
</CustomField>