force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Backup_Property__c.field-meta.xml
<CustomField>
    <fullName>Backup_Property__c</fullName>
    <inlineHelpText>Enter the name of the property that this service file is a backup for.</inlineHelpText>
    <label>Backup Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>