force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <description>The case number assigned to this applicant. This number is used in mail merges.</description>
    <inlineHelpText>The case number assigned to this applicant. This number is used in mail merges.</inlineHelpText>
    <label>Case Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>