force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Case_Property_Name_Calc__c.field-meta.xml
<CustomField>
    <fullName>Case_Property_Name_Calc__c</fullName>
    <formula>Case_Number__c &amp;&quot;: &quot;&amp; HOMEtracker__Applicant__r.LastName &amp;&quot;, &quot;&amp; property_name_calc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Property Name Calc</label>
    <type>Text</type>
</CustomField>