force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Cases_Check__c.field-meta.xml
<CustomField>
    <fullName>Cases_Check__c</fullName>
    <formula>HYPERLINK(
&quot;https://cgph.lightning.force.com/lightning/r/Report/00O6O000005tkpgUAA/view?queryScope=userFolders&amp;fv0=&quot;&amp;Id&amp;&quot;&amp;fv1=&quot;&amp; Pre_Applicant__r.Id &amp;&quot;&amp;fv2=&quot;&amp; HOMEtracker__Applicant__r.AccountId &amp; &quot;&amp;fv3=&quot;&amp; HOMEtracker__Applicant__r.Email ,
&quot;Cases Check&quot;,
&quot;_Blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cases Check</label>
    <type>Text</type>
</CustomField>