force-app/main/default/objects/HOMEtracker__Service_File__c/fields/CCO_form_for_bank_owned_properties__c.field-meta.xml
<CustomField>
    <fullName>CCO_form_for_bank_owned_properties__c</fullName>
    <inlineHelpText>For bank-owned properties, select &quot;Requested&quot; before generating the purchase agreement to include a CCO form with the purchase agreement. If not needed, then select &quot;not needed&quot;.</inlineHelpText>
    <label>CCO Form for Bank Owned Properties</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>