force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Cert_K_Sent_to_Development_By__c.field-meta.xml
<CustomField>
    <fullName>Cert_K_Sent_to_Development_By__c</fullName>
    <description>The coordinator who sent the Certificate K to the development. Will default autofill to the first user who saves after a date is entered in the &quot;Date Cert K Sent to Development&quot; field.</description>
    <inlineHelpText>The coordinator who sent the Certificate K to the development. Will default autofill to the first user who saves after a date is entered in the &quot;Date Cert K Sent to Development&quot; field.</inlineHelpText>
    <label>Cert K Sent to Development By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>