force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Cert_or_Inelig_Date__c.field-meta.xml
<CustomField>
    <fullName>Cert_or_Inelig_Date__c</fullName>
    <formula>IF( Certified__c = true,  Eligibility_Date__c ,
IF( Ineligibility__c = true,  Date_Application_Terminated_Withdrawn__c ,
null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cert or Inelig Date</label>
    <type>Date</type>
</CustomField>