force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Certified__c.field-meta.xml
<CustomField>
    <fullName>Certified__c</fullName>
    <formula>OR(
ISPICKVAL( HOMEtracker__Status__c , &quot;Certified - Pending Final Documents&quot;),
ISPICKVAL( HOMEtracker__Status__c ,&quot;Certified - Backup&quot;),
ISPICKVAL( HOMEtracker__Status__c ,&quot;Certified - Pending Closing&quot;),
ISPICKVAL( HOMEtracker__Status__c ,&quot;Certified - On Hold&quot;),
ISPICKVAL( HOMEtracker__Status__c ,&quot;Current Owner&quot;),
ISPICKVAL( HOMEtracker__Status__c ,&quot;Current Renter&quot;),
ISPICKVAL( HOMEtracker__Status__c ,&quot;Past Owner&quot;),
ISPICKVAL( HOMEtracker__Status__c ,&quot;Past Renter&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Certified by status for reports.  Checked true for following statuses: Certified - Pending Final Documents,Certified - Pending Closing,Current Owner,Current Renter,Past Owner,Past Renter</inlineHelpText>
    <label>Certified</label>
    <type>Checkbox</type>
</CustomField>