force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Certified_Gross_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Certified_Gross_Annual_Income__c</fullName>
    <description>This is the household&apos;s certified gross annual income.</description>
    <inlineHelpText>This is the household&apos;s certified gross annual income.</inlineHelpText>
    <label>Historic Certified Gross Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>