force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Certified_Max_Monthly_Housing_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Certified_Max_Monthly_Housing_Expenses__c</fullName>
    <description>Select and enter the appropriate value from the &quot;Max $&quot; fields in the &quot;Applicant &amp; Property Information&quot; subsection of the &quot;Income &amp; Asset Worksheet&quot; section above.</description>
    <inlineHelpText>Select and enter the appropriate value from the &quot;Max $&quot; fields in the &quot;Applicant &amp; Property Information&quot; subsection of the &quot;Income &amp; Asset Worksheet&quot; section above.</inlineHelpText>
    <label>Certified Max Monthly Housing Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>