force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Certified_or_Ineligible__c.field-meta.xml
<CustomField>
    <fullName>Certified_or_Ineligible__c</fullName>
    <formula>IF( Ineligibility__c  = true, &quot;Ineligible&quot;,
IF(  Certified__c = true, &quot;Certified&quot;,
&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certified or Ineligible</label>
    <type>Text</type>
</CustomField>