force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Certified_Range_of_Affordability__c.field-meta.xml
<CustomField>
    <fullName>Certified_Range_of_Affordability__c</fullName>
    <inlineHelpText>This is calculated in the Excel Eligibility spreadsheet: Gross Income / Median Income.</inlineHelpText>
    <label>Historic Certified Range of Afford</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>