force-app/main/default/objects/HOMEtracker__Service_File__c/fields/CGP_H_Days_to_Complete_Income_Cert__c.field-meta.xml
<CustomField>
    <fullName>CGP_H_Days_to_Complete_Income_Cert__c</fullName>
    <description>Auto calculated. 

If Certified: [Eligibility Date] - [Income Certification Start Date]
If Failed/Withdrawn/Cert On Hold/Cert Expired: [Date Terminated / Withdrawn / On Hold] - [Income Certification Start Date]</description>
    <formula>Cert_or_Inelig_Date__c - Income_Certification_Start_Date__c</formula>
    <inlineHelpText>Auto calculated. 

If Certified: [Eligibility Date] - [Income Certification Start Date]
If Failed/Withdrawn/Cert On Hold/Cert Expired: [Date Terminated / Withdrawn / On Hold] - [Income Certification Start Date]</inlineHelpText>
    <label>CGP&amp;H Days to Complete Income Cert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>