force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Closing_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Closing_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The staff member coordinating the closing.</description>
    <inlineHelpText>The staff member coordinating the closing.</inlineHelpText>
    <label>Closing Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services6</relationshipName>
    <type>Lookup</type>
</CustomField>