force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Closing_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closing_Invoice_Amount__c</fullName>
    <inlineHelpText>Amount of the sale fee paid to CGP&amp;H for processing the closing.  Usually 3% of sale price.</inlineHelpText>
    <label>Closing Invoice Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>