force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Closing_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Closing_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when the applicant&apos;s sold home is closed and has been invoiced.</inlineHelpText>
    <label>Closing Invoiced?</label>
    <type>Checkbox</type>
</CustomField>