force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Closing_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Closing_Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Workflow</label>
    <referenceTo>Contact_List__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>