force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Completed_Renter_Ed__c.field-meta.xml
<CustomField>
    <fullName>Completed_Renter_Ed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box once we receive an applicants counselling certificate.</inlineHelpText>
    <label>Completed Renter Ed</label>
    <type>Checkbox</type>
</CustomField>