force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The applicant&apos;s contact.</description>
    <formula>HYPERLINK(&quot;https://cgph.my.salesforce.com/&quot; &amp; HOMEtracker__Applicant__r.Contact_ID__c , HOMEtracker__Applicant__r.FirstName &amp; &quot; &quot; &amp; HOMEtracker__Applicant__r.LastName)</formula>
    <inlineHelpText>The applicant&apos;s contact.</inlineHelpText>
    <label>Primary Applicant</label>
    <type>Text</type>
</CustomField>