force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Create_Full_App_Reminder_Removal_Case__c.field-meta.xml
<CustomField>
    <fullName>Create_Full_App_Reminder_Removal_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically checked the day after the &quot;Application Due&quot; date in order to trigger a process to create a removal case for the Campaign Owner of the property associated with this Service File.</description>
    <inlineHelpText>This field is automatically checked the day after the &quot;Application Due&quot; date in order to trigger a process to create a removal case for the Campaign Owner of the property associated with this Service File.</inlineHelpText>
    <label>Create Full App Reminder Removal Case</label>
    <type>Checkbox</type>
</CustomField>