force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Current_Lease__c.field-meta.xml
<CustomField>
    <fullName>Current_Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Lease</label>
    <referenceTo>Leases__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>