force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Current_Lease_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Lease_End_Date__c</fullName>
    <formula>Current_Lease__r.Lease_end_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lease End Date</label>
    <type>Date</type>
</CustomField>