force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Current_Lease_Increase__c.field-meta.xml
<CustomField>
    <fullName>Current_Lease_Increase__c</fullName>
    <formula>Current_Lease__r.Rent_increase_percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lease Increase %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>