force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Current_Lease_Increase_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Lease_Increase_Year__c</fullName>
    <formula>Current_Lease__r.Rent_increase_year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lease Increase Year</label>
    <type>Text</type>
</CustomField>