force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Current_Lease_Name_Calc__c.field-meta.xml
<CustomField>
    <fullName>Current_Lease_Name_Calc__c</fullName>
    <formula>RIGHT(TEXT(Find_Current_Lease__c),4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lease Name</label>
    <type>Text</type>
</CustomField>