force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Current_Lease_Rent__c.field-meta.xml
<CustomField>
    <fullName>Current_Lease_Rent__c</fullName>
    <formula>Current_Lease__r.Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lease Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>