force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Current_Rent__c.field-meta.xml
<CustomField>
    <fullName>Current_Rent__c</fullName>
    <label>Current Rent</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>