force-app/main/default/objects/HOMEtracker__Service_File__c/fields/Current_Tenant_Occupancy_date__c.field-meta.xml
<CustomField>
    <fullName>Current_Tenant_Occupancy_date__c</fullName>
    <label>Current Tenant Occupancy date</label>
    <type>Date</type>
</CustomField>